@@ -7,69 +7,8 @@
 extern "C" {
 #endif /* __cplusplus */
 
-#define DILLO_START_PAGE "about:splash"
-#define DILLO_HOME "http://www.dillo.org/"
-#define D_GEOMETRY_DEFAULT_WIDTH   640
-#define D_GEOMETRY_DEFAULT_HEIGHT  550
-#define D_GEOMETRY_DEFAULT_XPOS  -9999
-#define D_GEOMETRY_DEFAULT_YPOS  -9999
-
-#define DW_COLOR_DEFAULT_GREY   0xd6d6d6
-#define DW_COLOR_DEFAULT_BLACK  0x000000
-#define DW_COLOR_DEFAULT_BLUE   0x0000ff
-#define DW_COLOR_DEFAULT_PURPLE 0x800080
-#define DW_COLOR_DEFAULT_BGND   0xd6d6c0
-
 /* Panel sizes */
 enum { P_tiny = 0, P_small, P_medium, P_large };
-
-/* define enumeration values to be returned for specific symbols */
-typedef enum {
-   DRC_TOKEN_ALLOW_WHITE_BG,
-   DRC_TOKEN_BG_COLOR,
-   DRC_TOKEN_CONTRAST_VISITED_COLOR,
-   DRC_TOKEN_ENTERPRESS_FORCES_SUBMIT,
-   DRC_TOKEN_FONT_FACTOR,
-   DRC_TOKEN_FORCE_MY_COLORS,
-   DRC_TOKEN_FULLWINDOW_START,
-   DRC_TOKEN_FW_FONT,
-   DRC_TOKEN_GENERATE_SUBMIT,
-   DRC_TOKEN_GEOMETRY,
-   DRC_TOKEN_HOME,
-   DRC_TOKEN_LIMIT_TEXT_WIDTH,
-   DRC_TOKEN_LINK_COLOR,
-   DRC_TOKEN_LOAD_IMAGES,
-   DRC_TOKEN_NOPROXY,
-   DRC_TOKEN_PANEL_SIZE,
-   DRC_TOKEN_PROXY,
-   DRC_TOKEN_PROXYUSER,
-   DRC_TOKEN_SAVE_DIR,
-   DRC_TOKEN_SEARCH_URL,
-   DRC_TOKEN_SHOW_BACK,
-   DRC_TOKEN_SHOW_BOOKMARKS,
-   DRC_TOKEN_SHOW_CLEAR_URL,
-   DRC_TOKEN_SHOW_EXTRA_WARNINGS,
-   DRC_TOKEN_SHOW_FORW,
-   DRC_TOKEN_SHOW_HOME,
-   DRC_TOKEN_SHOW_MENUBAR,
-   DRC_TOKEN_SHOW_MSG,
-   DRC_TOKEN_SHOW_PROGRESS_BOX,
-   DRC_TOKEN_SHOW_RELOAD,
-   DRC_TOKEN_SHOW_SAVE,
-   DRC_TOKEN_SHOW_SEARCH,
-   DRC_TOKEN_SHOW_STOP,
-   DRC_TOKEN_SHOW_TOOLTIP,
-   DRC_TOKEN_SHOW_URL,
-   DRC_TOKEN_SMALL_ICONS,
-   DRC_TOKEN_START_PAGE,
-   DRC_TOKEN_TEXT_COLOR,
-   DRC_TOKEN_TRANSIENT_DIALOGS,
-   DRC_TOKEN_USE_DICACHE,
-   DRC_TOKEN_USE_OBLIQUE,
-   DRC_TOKEN_VISITED_COLOR,
-   DRC_TOKEN_VW_FONT,
-   DRC_TOKEN_W3C_PLUS_HEURISTICS
-} RcToken_t;
 
 typedef struct _DilloPrefs DilloPrefs;
 
